# rk3506-m0-pac

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  transforms.yaml
.github/workflows/: build-test.yaml  docs.yaml
svd/: cortex-m0.yaml  gpio.yaml  interrupts-m0.yaml  intmux.yaml  mailbox.yaml  main-m0.yaml  rk3506-m0-base.svd
