[package]
name = "rk3506-m0-pac"
version = "0.1.0"
edition = "2024"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
features = ["atomics", "critical-section", "defmt", "rt"]
default-target = "thumbv6m-none-eabi"
targets = []

[lib]
test = false
bench = false

[dependencies]
critical-section = { version = "1", optional = true }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional = true }
defmt = { version = "1", optional = true }
portable-atomic = { version = "1", default-features = false, optional = true , features = ["unsafe-assume-single-core"] }

[features]
default = ["critical-section", "rt"]

atomics = ["dep:portable-atomic"]
rt = ["cortex-m-rt/device"]
