[package]
name = "rk3506-m0-pac"
version = "0.1.0"
edition = "2024"

description = "RK3506 M0 peripheral access crate."
authors = ["Aaron Griffith <aargri@gmail.com>"]
repository = "https://github.com/agrif/rk3506-m0-pac"
documentation = "https://agrif.github.io/rk3506-m0-pac"
readme = "README.md"
license = "MIT"

keywords = ["rk3506", "pac", "rk3506-m0"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
features = ["defmt", "rt"]
default-target = "thumbv6m-none-eabi"
targets = []

[lib]
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional = true }
defmt = { version = "1", optional = true }

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
